Add base structure and style

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,4 +2,32 @@
   <h1>Dreams</h1>
 </header>
 
+<main>
+  <section>
+    <h2>Welcome to Dreams</h2>
+    <p>
+      Share your dreams with other people, browse and search dreams from people
+      all over the world!
+    </p>
+  </section>
+  <section>
+    <h3>h3 title</h3>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus iste
+      fugit voluptas est dignissimos! Fugiat rem quia, dicta eaque delectus
+      consequatur facere natus velit molestiae eveniet minima, magnam labore
+      aperiam.
+    </p>
+  </section>
+  <section>
+    <h3>h3 title</h3>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores similique
+      eveniet ut itaque totam consequuntur nobis fugiat nostrum voluptates,
+      accusamus, esse laudantium, facere veniam odit sint placeat velit
+      expedita! Et.
+    </p>
+  </section>
+</main>
+
 <footer>Footer</footer>
