--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,1 +1,15 @@
+header {
+  padding: 1rem;
+}
 
+main {
+  padding: 1rem;
+}
+
+section {
+  margin-bottom: 2rem;
+}
+
+footer {
+  padding: 1rem;
+}
